[project]
name = "ong_hue_api"
version = "0.2.0"
# license = {file = "LICENSE.txt"}
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "Tool to wrap HUE website like if it were an API"

dependencies = [
    "requests >=2.31.0",
    "pandas", # for reading data
    "openpyxl", # for writing xlsx files
    "keyring", # For securely storing/retrieving passwords
    "pywin32", # Another one for windows interface, used for testing username and password
    "win11toast", # For sending notifications
    "tqdm",     # Nice progress bar
#    "loguru",   # Easier logs
    "pip-system-certs", # Avoids "self signed certificate in certificate chain" error in corporate networks
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[project.urls]  # Optional
"Homepage" = "https://github.com/Oneirag/ong_hue_api"
"Source" = "https://github.com/Oneirag/ong_hue_api"

[build-system]
requires = [
    "setuptools",
    "wheel",
]

build-backend = "setuptools.build_meta"

[project.scripts]
# Not needed anymore
# liquidaciones = "ong_gesfincas.liquidaciones_gui:main"
hue_api = "ong_hue_api.__main__:main"
