[project]
name = "ong_hue_api"
version = "0.6.1"
# license = {file = "LICENSE.txt"}
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "Tool to wrap HUE website like if it were an API"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[project.urls]  # Optional
"Homepage" = "https://github.com/Oneirag/ong_hue_api"
"Source" = "https://github.com/Oneirag/ong_hue_api"

[build-system]
requires = [
    "setuptools",
    "wheel",
]

build-backend = "setuptools.build_meta"

[project.scripts]
hue_api = "ong_hue_api.__main__:main"
delete_storage = "ong_hue_api.internal_storage:delete_all"

